--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -5,4 +5,15 @@
     --color-darkpurple: #201f31;
     --color-lightpink: #ffbade;
     --color-darkpink: #d39bbc;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
   }
+  
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
+  }
+
+  
